<resources>
    <string name="app_name">CleanAir</string>
    <string name="loginButtonText">Login</string>
    <string name="emailSignUp">email</string>
    <string name="usernameSignUp">username</string>
    <string name="passwordSignUp">password</string>
    <string name="signUpButton">Create Account</string>
    <string name="SignUpLoginButton">SignUp</string>
    <string name="emailSignIn">email</string>
    <string name="passwordSignIn">password</string>
    <string name="pm_2_5_layer">PM 2.5</string>
    <string name="pollution_sources">Pollution</string>
    <string name="national_parks_layer">Parks</string>
    <string name="quality_of_air_layer">Air Quality</string>
    <string name="searchbar_hint">new location</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>