<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pm2.5"
        android:enabled="true"
        android:icon="@drawable/air_ware_24"
        android:title="@string/pm_2_5_layer" />
    <item
        android:id="@+id/pollution"
        android:enabled="true"
        android:icon="@drawable/factory_24"
        android:title="@string/pollution_sources" />
    <item
        android:id="@+id/national_parks"
        android:enabled="true"
        android:icon="@drawable/park_tree_24"
        android:title="@string/national_parks_layer" />
    <item
        android:id="@+id/air_quality"
        android:enabled="true"
        android:icon="@drawable/air_quality_24"
        android:title="@string/quality_of_air_layer" />
</menu>